// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InstitutionAddress renders all 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul>
        <li>
          <div
            class="__InlineList__"
            data-testid="inline-data-list"
          >
            <ul>
              <li>
                Rue Einstein, 
              </li>
              <li>
                CH-1211 Genève 23
              </li>
            </ul>
          </div>
          , 
        </li>
        <li>
          <span>
            Meyrin
          </span>
          , 
        </li>
        <li>
          <span>
            Switzerland
          </span>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;

exports[`InstitutionAddress renders empty 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul />
    </div>
  </span>
</DocumentFragment>
`;

exports[`InstitutionAddress renders with city already in postal address 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul>
        <li>
          <div
            class="__InlineList__"
            data-testid="inline-data-list"
          >
            <ul>
              <li>
                Rue Einstein, 
              </li>
              <li>
                123 meyrin
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;

exports[`InstitutionAddress renders with country already in postal address 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul>
        <li>
          <div
            class="__InlineList__"
            data-testid="inline-data-list"
          >
            <ul>
              <li>
                Rue Einstein, 
              </li>
              <li>
                123 SWITZERLAND
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;

exports[`InstitutionAddress renders with only country 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul>
        <li>
          <span>
            Switzerland
          </span>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;

exports[`InstitutionAddress renders with only postal address 1`] = `
<DocumentFragment>
  <span>
    <div
      class="__InlineList__ di"
    >
      <ul>
        <li>
          <div
            class="__InlineList__"
            data-testid="inline-data-list"
          >
            <ul>
              <li>
                Rue Einstein, 
              </li>
              <li>
                CH-1211 Genève 23
              </li>
            </ul>
          </div>
        </li>
      </ul>
    </div>
  </span>
</DocumentFragment>
`;
